kubernetes.tf

/*
resource "kubernetes_service_account" "hpc-1-s3-csi-driver" {
  metadata {
    name      = "s3-csi-driver-sa"
    namespace = "kube-system"
    # attach_policy_arn = "arn:aws:iam::aws:policy/AmazonS3FullAccess"
    # role_name = ""
  }
}
*/
